--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,12 @@ name = "ripe_ip_search"
 authors = [{name = "Sergey M"}]
 readme = "README.md"
 license = {file = "LICENSE"}
-classifiers = ["License :: OSI Approved :: Apache Software License"]
+
+classifiers = [
+  "License :: OSI Approved :: Apache Software License",
+  "Topic :: Internet"
+]
+
 requires-python = ">=3.11.7"
 
 dependencies = [
